// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Spacer /> renders correctly when bottom is set 1`] = `
<div
  className="VwNeT"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when horizontal is set 1`] = `
<div
  className="jiTmya"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when left is set 1`] = `
<div
  className="mavsz"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when right is set 1`] = `
<div
  className="jDzAFG"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when top is set 1`] = `
<div
  className="kDbJvv"
  size="1rem"
/>
`;

exports[`<Spacer /> renders correctly when vertical is set 1`] = `
<div
  className="juFLUa"
  size="1rem"
/>
`;
